--- a/src/LaboratorioGestor/Views/Recebimentos/Create.cshtml
+++ b/src/LaboratorioGestor/Views/Recebimentos/Create.cshtml
@@ -37,9 +37,9 @@
                 <span asp-validation-for="IDCobrancas" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IDUsuarios" class="control-label"></label>
-                <input asp-for="IDUsuarios" class="form-control" />
-                <span asp-validation-for="IDUsuarios" class="text-danger"></span>
+                <label asp-for="IDProtetico" class="control-label"></label>
+                <input asp-for="IDProtetico" class="form-control" />
+                <span asp-validation-for="IDProtetico" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
