--- a/src/LaboratorioGestor/Views/Recebimentos/Details.cshtml
+++ b/src/LaboratorioGestor/Views/Recebimentos/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.IDCobrancas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDUsuarios)
+            @Html.DisplayNameFor(model => model.IDProtetico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDUsuarios)
+            @Html.DisplayFor(model => model.IDProtetico)
         </dd>
     </dl>
 </div>
