--- a/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
+++ b/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LaboratorioGestor</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="~/jquery-ui-bootstrap/css/custom-theme/jquery.ui.1.9.2.ie.css" rel="stylesheet" />
     <link href="~/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.9.2.custom.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/pagedlist/PagedList.css" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -60,8 +60,10 @@
             &copy; 2019 - LaboratorioGestor - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/jquery-ui-bootstrap/js/jquery-1.8.3.min.js"></script>
     <script src="~/jquery-ui-bootstrap/js/jquery-ui-1.9.2.custom.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
