Iniciando exclução de recebimentos

--- a/src/LaboratorioGestor/Views/Recebimentos/Create.cshtml
+++ b/src/LaboratorioGestor/Views/Recebimentos/Create.cshtml
@@ -32,9 +32,9 @@
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IDCobrancas" class="control-label"></label>
-                <input asp-for="IDCobrancas" class="form-control" />
-                <span asp-validation-for="IDCobrancas" class="text-danger"></span>
+                <label asp-for="IDCobranca" class="control-label"></label>
+                <input asp-for="IDCobranca" class="form-control" />
+                <span asp-validation-for="IDCobranca" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IDProtetico" class="control-label"></label>
