--- a/src/LaboratorioGestor/Views/Recebimentos/Delete.cshtml
+++ b/src/LaboratorioGestor/Views/Recebimentos/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Valor)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDCobrancas)
+            @Html.DisplayNameFor(model => model.IDCobranca)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDCobrancas)
+            @Html.DisplayFor(model => model.IDCobranca)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IDProtetico)
