--- a/src/LaboratorioGestor/Views/Cobrancas/Index.cshtml
+++ b/src/LaboratorioGestor/Views/Cobrancas/Index.cshtml
@@ -68,7 +68,7 @@
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">
                         <span title="Excluir" class="fa fa-trash-alt"></span>
                     </a>
-                    <a asp-controller="Recebimentos" asp-action="NovoRecebimento"  asp-route-IDCobrancas="@item.Id" class="btn btn-info" data-modal="">
+                    <a asp-controller="Recebimentos" asp-action="NovoRecebimento"  asp-route-IDCobranca="@item.Id" class="btn btn-info" data-modal="" >
                         <span title="Editar" class="fa fa-money-check-alt"></span>
                     </a>
                 </td>
