--- a/src/LaboratorioGestor/Views/Account/Login.cshtml
+++ b/src/LaboratorioGestor/Views/Account/Login.cshtml
@@ -3,33 +3,43 @@
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Conecte-se";
 }
 
-<h2>@ViewData["Title"].</h2>
-<div class="row">
-    <div class="col-md-8">
+<br />
+<div class="card border-secondary border-secondary">
+    <div class="card-header text-center text-secondary">Faça login na sua conta</div>
+    <div class="card-body text-info">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="UserName" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="UserName" class="form-control" />
-                        <span asp-validation-for="UserName" class="text-danger"></span>
+                <vc:Summary></vc:Summary>
+
+                <div class="form-group text-black-50">
+                    <label asp-for="UserName" control-label"></label>
+
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text fa fa-user" id="IconeUsuario" title="Usuário"></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Usuário" aria-label="Usuário" aria-describedby="IconeUsuario" asp-for="UserName" />
                     </div>
+                    <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
+
+
+                <div class="form-group text-black-50">
+                    <label asp-for="Password" control-label"></label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text fa fa-lock" id="IconeSenha" title="Senha"></span>
+                        </div>
+                        <input class="form-control" placeholder="Senha" aria-label="Senha" aria-describedby="IconeSenha" asp-for="Password" />
                     </div>
+                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+
+                <div class="form-group text-center">
+                    <div class="col-md-offset-2">
                         <div class="checkbox">
                             <label asp-for="RememberMe">
                                 <input asp-for="RememberMe" />
@@ -38,49 +48,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                <div class="form-group text-center">
+                    <div class="col-md-offset-2">
+                        <button type="submit" class="btn btn-lg btn-primary">Confirmar</button>
                     </div>
                 </div>
-                <p>
-                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                <p class="text-center">
+                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">
+                        Registrar-se como um novo usuário?
+                    </a>
                 </p>
-                <p>
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                <p class="text-center">
+                    <a asp-action="ForgotPassword">
+                        Esqueceu sua senha?
+                    </a>
                 </p>
             </form>
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-                if (loginProviders.Count == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
         </section>
     </div>
 </div>
