--- a/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
+++ b/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
 
 </head>
 <body>
-    <header>
+    <header class="text-center">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Laboratorio</a>
+                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Laboratorio</a>*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,6 +49,7 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
