--- a/src/LaboratorioGestor/Views/Produtos/Create.cshtml
+++ b/src/LaboratorioGestor/Views/Produtos/Create.cshtml
@@ -8,18 +8,18 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-10">
+    <div>
         <form asp-action="Create">
 
             <vc:Summary></vc:Summary>
 
             <div class="form-row">
-                <div class="form-group col-md-8">
+                <div class="form-group">
                     <label asp-for="Nome" class="control-label"></label>
                     <input asp-for="Nome" class="form-control" />
                     <span asp-validation-for="Nome" class="text-danger"></span>
                 </div>
-                <div class="form-group col-md-2">
+                <div class="form-group">
                     <label asp-for="Valor" class="control-label"></label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
