--- a/src/LaboratorioGestor/wwwroot/css/site.css
+++ b/src/LaboratorioGestor/wwwroot/css/site.css
@@ -8,12 +8,25 @@ a.navbar-brand {
 }
 
 .container {
-    width: 70vw;
+    width: 60vw;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
+
+.alinhar-centro {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
+
+.centralizar-componentes {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center
 }
+
 
 input {
     color: #93979C;
@@ -89,3 +102,4 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+        
