--- a/src/LaboratorioGestor/Views/Laboratorios/Create.cshtml
+++ b/src/LaboratorioGestor/Views/Laboratorios/Create.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Cadastrar Laboratório";
 }
 
-<h1>@ViewData["Title"]</h1>
-
+<h1 class="centralizar-componentes" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">@ViewData["Title"]</h1>
 <hr />
-<div class="row">
+<div class="row centralizar-componentes">
     <div class="col-md-10">
         <form asp-action="Create">
 
