--- a/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
+++ b/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
@@ -11,11 +11,10 @@
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 
 </head>
-<body>
+<body class="text-center">
     <header class="text-center">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Laboratorio</a>*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
