--- a/src/LaboratorioGestor/wwwroot/css/site.css
+++ b/src/LaboratorioGestor/wwwroot/css/site.css
@@ -7,27 +7,6 @@ a.navbar-brand {
     word-break: break-all;
 }
 
-.container {
-    width: 60vw;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center
-}
-
-.alinhar-centro {
-    flex-direction: row;
-    justify-content: center;
-    align-items: center
-}
-
-.centralizar-componentes {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center
-}
-
-
 input {
     color: #93979C;
 }
@@ -51,7 +30,25 @@ a {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-    font-size: 14px;
+    /*font-size: 14px;
+    background-color: #F5F5F5;*/
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -ms-overflow-style: scrollbar;
+    -webkit-tap-highlight-color: transparent;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -68,16 +65,19 @@ html {
     border-bottom: 1px solid #e5e5e5;
 }
 
-.box-shadow {
-    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 30px;
+    margin: auto;
 }
 
-.box {
-    width: 300px;
-    height: 300px;
-    background: #fff;
-}
-
+/*.form{
+    width: 100%;
+    max-width: 90%;
+    padding: 30px;
+    margin: auto;
+}*/
 button.accept-policy {
     font-size: 1rem;
     line-height: inherit;
@@ -102,4 +102,7 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
-        
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
