--- a/src/LaboratorioGestor/Views/Account/Login.cshtml
+++ b/src/LaboratorioGestor/Views/Account/Login.cshtml
@@ -8,6 +8,20 @@
 
 <br />
 
+<style>
+    body {
+        margin-bottom: 350px;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #E9ECEF;
+    }
+</style>
+
+
 <form class="form-signin" asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]">
 
     <vc:Summary></vc:Summary>
@@ -28,7 +42,7 @@
         </label>
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Confirmar</button>
+    <button class="btn btn-lg btn-primary btn-block" style="width:295px" type="submit">Confirmar</button>
 
     <p class="text-center">
         <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">
