--- a/src/LaboratorioGestor/wwwroot/css/site.css
+++ b/src/LaboratorioGestor/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+/** {
+    font-family: sans-serif;
+}*/
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -10,10 +14,10 @@ a.navbar-brand {
 input {
     color: #93979C;
 }
-/* Provide sufficient contrast against white background */
-a {
+
+/*a {
     color: #0366d6;
-}
+}*/
 
 .btn-primary {
     color: #fff;
@@ -29,26 +33,14 @@ a {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-    /*font-size: 14px;
-    background-color: #F5F5F5;*/
-    font-family: sans-serif;
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -ms-overflow-style: scrollbar;
-    -webkit-tap-highlight-color: transparent;
+html,
+body {
+    height: 100%;
+    background-color: #EFF3F8
 }
 
-body {
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
+html {
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -65,19 +57,6 @@ body {
     border-bottom: 1px solid #e5e5e5;
 }
 
-.form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 30px;
-    margin: auto;
-}
-
-/*.form{
-    width: 100%;
-    max-width: 90%;
-    padding: 30px;
-    margin: auto;
-}*/
 button.accept-policy {
     font-size: 1rem;
     line-height: inherit;
@@ -91,9 +70,80 @@ html {
 }
 
 body {
-    /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
+
+.ca-page-default.ca-page-default-fold {
+    position: relative;
+}
+
+.ca-page-default {
+    border: 1px solid #c9d3dd;
+    padding: 50px 70px;
+    background-color: #fff;
+}
+
+    .ca-page-default.ca-page-default-fold:after {
+        content: "";
+        position: absolute;
+        top: -1px;
+        right: -1px;
+        width: 0;
+        height: 0;
+        border-color: #f1f4f9 #f1f4f9 #f1f4f9 #c9d3dd;
+        border-style: solid;
+        border-width: 40px 0 0 40px;
+    }
+
+*, *::before, *::after {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+    background: #EFF3F8;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    position: relative;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    /*text-align: center;*/
+}
+
+
+
+    .form-signin .checkbox {
+        font-weight: 400;
+    }
+
+
+    .form-signin .form-control {
+        position: relative;
+        box-sizing: border-box;
+        height: auto;
+        padding: 10px;
+        font-size: 16px;
+    }
+
+        .form-signin .form-control:focus {
+            z-index: 2;
+        }
+
+    .form-signin input[type="UserName"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    .form-signin input[type="Password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
 
 .footer {
     position: absolute;
@@ -101,8 +151,4 @@ body {
     width: 100%;
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
-}
-
-*, ::after, ::before {
-    box-sizing: border-box;
 }
